--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="invoice in vendorInvoicesArray">
+                            <tr v-for="invoice in vendorInvoicesArray">{{ invoice }}
                                <td>{{invoice.number}}</td>
                                <td>{{invoice.date}}</td>
                                <td>{{invoice.description}}</td>
@@ -164,7 +164,7 @@
                                         <th class="px-4 text-right">Inv Amt</th>
                                         <th class="px-4 text-right">Paid</th>
                                     </tr>
-                                    <tr v-for="(invoice, index) in vendorInvoicesArray">{{invoice}}{{ checked }}
+                                    <tr v-for="(invoice, index) in vendorInvoicesArray">{{ checked }}
                                         <td v-if="invoice.paid < invoice.amount" class="px-4"><input type="checkbox" v-model="checked[invoice.id]" @click="updatePayments(invoice.id)"/></td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.number}}</td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.id}}</td>
