--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
                                     <tr v-for="(invoice, index) in vendorInvoicesArray">{{ checked }}
                                         <td v-if="invoice.paid < invoice.amount" class="px-4"><input type="checkbox" v-model="checked[invoice.id]" @click="updatePayments(invoice.id)"/></td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.number}}</td>
-                                        <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.paidid}}</td>
+                                        <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.id}}</td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.date}}</td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4 text-right">{{invoice.amount}}</td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4 text-right">{{checked[invoice.id]?invoice.amount:"0.00"}}</td>
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
-                                        <td class="px-4 text-right"></td><td class="px-4 text-right">{{ currentSupplierSum(suppl) }}</td>
+                                        <td class="px-4 text-right"></td><td class="px-4 text-right">{{ currentSupplierSum(suppl).toFixed(2) }}</td>
                                     </tr>
                                 </table>
                             </div>
