--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        <br><br>{{vendorInvoicesArray}}
+                        <br><br>{{selectedPayments}}
                         <div>
                             <div v-if="vendorInvoices.length > 0">
                                 <table>
