--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                                <td>{{invoice.date}}</td>
                                <td>{{invoice.description}}</td>
                                <td class="text-end">{{invoice.amount}}</td>
-                               <td class="text-end">{{invoice.paid}}</td>
-                               <td class="text-end">{{invoice.amount - invoice.paid}}</td>
+                               <td class="text-end">{{invoice.paidAmount}}</td>
+                               <td class="text-end">{{invoice.amount - invoice.paidAmount}}</td>
                                <td>{{invoice.paidid}}</td>
                                <td class="text-end"></td>
                             </tr>
