--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         Back
                     </button>
                     <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPaymentsScreen=true">
-						Complete Process payments
+						Complete Process payments{{allInvoices}}
 					</button>
 				</div>										    		
                 <div v-if="selectedPayments.length > 0">
