--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        <br><br>{{selectedPayments}}
+                        <br><br>
                         <div>
                             <div v-if="vendorInvoices.length > 0">
                                 <table>
@@ -190,7 +190,7 @@
                         Back
                     </button>
                     <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPaymentsScreen=true">
-						Complete Process payments{{allInvoices}}
+						Complete Process payments{{allInvoices.filter(inv=>inv["Supplier"]!=="Ulreco")}}
 					</button>
 				</div>										    		
                 <div v-if="selectedPayments.length > 0">
