--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				        Select {{suppl}}{{vendorInvoices}}
 				    </button>
                     <div v-if="paymentProcessing">
-                        <br><br>
+                        <br><br>{{ checked }}
                         <div>
                             <div v-if="vendorInvoices.length > 0">
                                 <table>
@@ -164,7 +164,7 @@
                                         <th class="px-4 text-right">Inv Amt</th>
                                         <th class="px-4 text-right">Paid</th>
                                     </tr>
-                                    <tr v-for="(invoice, index) in vendorInvoicesArray">{{ checked }}
+                                    <tr v-for="(invoice, index) in vendorInvoicesArray">
                                         <td v-if="invoice.paid < invoice.amount" class="px-4"><input type="checkbox" v-model="checked[invoice.id]" @click="updatePayments(invoice.id, invoice.amount)"/></td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.number}}</td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.id}}</td>
