--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPaymentsScreen=true">
 						Complete Process payments{{allInvoices}}
 					</button>
-				</div>										    		
+				</div>	PR:{{Object.entries(paymentsRecord)}}									    		
                 <div v-if="selectedPayments.length > 0">
                     <div v-for="(record) in Object.entries(paymentsRecord)" class="row"> 
                         <div class="col">
