--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				        Select {{suppl}}{{vendorInvoices}}
 				    </button>
                     <div v-if="paymentProcessing">
-                        <br><br>{{ checked }}
+                        <br><br>{{ checked }}PR:{{Object.entries(paymentsRecord)}}
                         <div>
                             <div v-if="vendorInvoices.length > 0">
                                 <table>
@@ -192,7 +192,7 @@
                     <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPaymentsScreen=true">
 						Complete Process payments{{allInvoices}}
 					</button>
-				</div>	PR:{{Object.entries(paymentsRecord)}}									    		
+				</div>									    		
                 <div v-if="selectedPayments.length > 0">
                     <div v-for="(record) in Object.entries(paymentsRecord)" class="row"> 
                         <div class="col">
