Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
-                                        <td class="px-4 text-right"></td><td class="px-4 text-right">{{ currentSupplierSum(suppl).toFixed(2) }}</td>
+                                        <td class="px-4 text-right"></td><td class="px-4 text-right">{{ currentSupplierSum(suppl)?.toFixed(2) }}</td>
                                     </tr>
                                 </table>
                             </div>
