--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
                         Back
                     </button>
                     <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPaymentsScreen=true">
-						Complete Process payments{{allInvoices}}
+						Complete Process payments
 					</button>
 				</div>									    		
-                <div v-if="selectedPayments.length > 0">{{Object.entries(paymentsRecord)}}
+                <div v-if="selectedPayments.length > 0">
                     <div v-for="(record) in Object.entries(paymentsRecord)" class="row"> 
                         <div class="col">
                               {{ record[0] }} GBP {{ record[1].toFixed(2)}}
