Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				        Select {{suppl}}{{vendorInvoices}}
 				    </button>
                     <div v-if="paymentProcessing">
-                        <br><br>{{ checked }}PR:{{Object.entries(paymentsRecord)}}
+                        <br><br>{{ checked[1] }}PR:{{Object.entries(paymentsRecord)}}
                         <div>
                             <div v-if="vendorInvoices.length > 0">
                                 <table>
