--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				        Select
 				    </button>
                     <div v-if="paymentProcessing">
-                        <br><br>{{ checked[1] }}PR:{{Object.entries(paymentsRecord)}}{{vendorInvoicesArray}}
+                        <br><br>{{ checked[1] }}PR:{{Object.entries(paymentsRecord)}}
                         <div>
                             <div v-if="vendorInvoices.length > 0">
                                 <table>
@@ -171,7 +171,7 @@
                                         <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.id}}</td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.date}}</td>
                                         <td v-if="invoice.paid < invoice.amount" class="px-4 text-right">{{invoice.amount}}</td>
-                                        <td v-if="invoice.paid < invoice.amount" class="px-4 text-right">{{displayPaid(invoice)}}</td>
+                                        <td v-if="invoice.paid < invoice.amount" class="px-4 text-right">{{displayPaid(invoice).toFixed(2)}}</td>
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
