--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                         <td v-if="invoice.paid < invoice.amount" class="px-4 text-right">{{displayPaid(invoice)}}</td>
                                     </tr>
                                     <tr>
-                                        <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
+                                        <td></td><td></td><td></td><td class="px-4 text-right">Total</td>
                                         <td class="px-4 text-right"></td><td class="px-4 text-right">{{ currentSupplierSum(suppl)? currentSupplierSum(suppl).toFixed(2) : selectedSupplierSum }}</td>
                                     </tr>
                                 </table>
