--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <th>Payment Date</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody>unpaid: {{ unpaidVendorInvoicesArray }}
                             <tr v-for="invoice in vendorInvoicesArray">
                                <td>{{invoice.number}}</td>
                                <td>{{invoice.date}}</td>
