--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                         <th class="px-4 text-right">Paid</th>
                                     </tr>via {{vendorInvoicesArray}}unpaid: {{ unpaidVendorInvoicesArray }}
                                     <!--Only show unpaid invoices-->
-                                    <tr v-for="(invoice, index) in vendorInvoicesArray">
+                                    <tr v-for="(invoice, index) in unpaidVendorInvoicesArray">
                                         <td v-if="invoice.paid < invoice.amount" class="px-4"><input type="checkbox" v-model="checked[invoice.id]" @click="updatePayments(invoice.id, invoice.amount, invoice.number, invoice.supplier)"/></td>
                                         <td v-if="invoice.paidAmount < invoice.amount" class="px-4">{{invoice.number}}</td>
                                         <td v-if="invoice.paidAmount < invoice.amount" class="px-4">{{invoice.id}}</td>
