--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                         <td class="px-4">{{invoice.number}}</td>
                                         <td class="px-4">{{invoice.id}}</td>
                                         <td class="px-4">{{invoice.date}}</td>
-                                        <td class="px-4 text-right">{{invoice.amount}}</td>
+                                        <td class="px-4 text-right">{{invoice['amount'].toFixed(2)}}</td>
                                         <td class="px-4 text-right">{{displayPaid(invoice)}}</td>
                                     </tr>
                                     <tr>
