--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                                     </tr>
                                 </table>
                             </div>
+                            <div v-if="vendorInvoices.length === 0">There are no outstanding invoices for {{suppl}}typeof: {{typeof vendorInvoices}}</div>
                         </div>
                     </div>
                 </section>
