Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                     </tr>
                                 </table>
                             </div>
-                            <div v-else>There are no outstanding invoices for {{suppl}}typeof: {{typeof vendorInvoices}}</div>
+                            <div v-else>There are no outstanding invoices for {{suppl}}</div>
                         </div>
                     </div>
                 </section>
