--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				        Supplier Review 
 				    </button>
                 </p>
-                <div v-if="vendorInvoices.length > 0">
+                <div v-if="vendorInvoices?.length > 0">
                     <table class="table table-striped">
                         <thead>
                             <div class="text-center fw-bold"><h3>{{suppl}}</h3></div>
@@ -156,7 +156,7 @@
                     <div v-if="paymentProcessing">
                         <br><br>
                         <div>
-                            <div v-if="unpaidVendorInvoicesArray.length > 0">
+                            <div v-if="unpaidVendorInvoicesArray?.length > 0">
                                 <table>
                                     <tr>
                                         <th></th>
@@ -167,7 +167,7 @@
                                         <th class="px-4 text-right">Paid</th>
                                     </tr>
                                     <!--Only show unpaid invoices-->
-                                    <tr v-for="(invoice, index) in unpaidVendorInvoicesArray" v-if="unpaidVendorInvoicesArray.length > 0">
+                                    <tr v-for="(invoice, index) in unpaidVendorInvoicesArray" v-if="unpaidVendorInvoicesArray?.length > 0">
                                         <td class="px-4"><input type="checkbox" v-model="checked[invoice.id]" @click="updatePayments(invoice.id, invoice.amount, invoice.number, invoice.supplier)"/></td>
                                         <td class="px-4">{{invoice.number}}</td>
                                         <td class="px-4">{{invoice.id}}</td>
