--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                         <td class="px-4">{{invoice.date}}</td>
                                         <td class="px-4 text-right">{{invoice['amount']}}</td>
                                         <td class="px-4 text-right">{{displayPaid(invoice)}}</td>
-                                        <td class="px-4 text-right">PAYMENT DATE INPUT HERE</td>
+                                        <td class="px-4 text-right"><input type="date" v-model="date"/></td>
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td class="px-4 text-right">Total</td>
