Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </div>
                    
                     <div class="fw-bold">
-                        Total paid: GBP {{ grandTotalPaid().toFixed(2) }}
+                        Total paid: GBP {{ grandTotalPaid().toFixed(2) }} on {{ date }}
                     </div>
                 </div>
                 <div v-else>
