--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <tbody>
                             <tr v-for="invoice in vendorInvoicesArray">
                                <td>{{invoice.number}}</td>
-                               <td>{{invoice.idx}}</td>
+                               <td>{{invoice.id}}</td>
                                <td>{{invoice.date}}</td>
                                <td>{{invoice.description}}</td>
                                <td class="text-end">{{invoice.amount}}</td>
