--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 						</button>
 				    </div>
                     <div>Please select invoices to pay by supplier.  When ready to pay click "Payments Summary".</div>
+                    <div>{{ paymentsSummaryMessage }}</div>
                     <p class="text-center py-5"></p>
                     <label>Supplier Name:</label>
                     <input type="text" name="supplier" v-model="suppl"></input>
