Modified database_queries.php, index.html

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div v-if="confirmProcessPaymentsScreen">
                 Please confirm you wish to allocate the payments.
                 <div v-for="inv in selectedPayments">
-                  {{inv.amount}} {{inv.invNo}} {{inv.supplier}} {{ date }}
+                  GBP {{inv.amount}} {{inv.invNo}} {{inv.supplier}} {{ date }}
                 </div>
                 <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPayments()">
 				Confirm
