--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 				        </div>
 				        <div class="btn-group" role="group">
 				            <div class="col-lg-6">
-								<button class="btn btn-info" @click="supplierReview=true; addInvoice=false; suppl=null; payments=false">
+								<button class="btn btn-info" @click="supplierReview=true; message=false; addInvoice=false; suppl=null; payments=false">
 								    Supplier Review 
 								</button>
 				            </div>
 				            <div class="col-lg-6">
-								<button class="btn btn-info" @click="addInvoice=true; supplierReview=false; payments=false">
+								<button class="btn btn-info" @click="addInvoice=true; message=false; supplierReview=false; payments=false">
 								    Input invoices
 								</button>
 				            </div>
                             <div class="col-lg-6">
-								<button class="btn btn-info" @click="addInvoice=false; supplierReview=false; payments=true; vendorInvoices = null">
+								<button class="btn btn-info" @click="addInvoice=false; message=false; supplierReview=false; payments=true; vendorInvoices = null">
 								    Process payments
 								</button>
 				            </div>
                             <div class="col-lg-6">
-								<button class="btn btn-info" @click="addInvoice=false; supplierReview=false; payments=false">
+								<button class="btn btn-info" @click="addInvoice=false; message=false; supplierReview=false; payments=false">
 								    Back
 								</button>
 				            </div>
