Modified index.html, app.js

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                <td>{{invoice.date}}</td>
                                <td>{{invoice.description}}</td>
                                <td class="text-end">{{invoice.amount}}</td>
-                               <td class="text-end">{{(invoice.paidAmount)?.toFixed(2)}}</td>
+                               <td class="text-end">{{Number(invoice.paidAmount).toFixed(2)}}</td>
                                <td class="text-end">{{(invoice.amount - invoice.paidAmount)?.toFixed(2)}}</td>
                                <td>{{invoice.paidid}}</td>
                                <td class="text-end"></td>
