Modified database_queries.php, index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                <td class="text-end">{{(invoice.paidAmount).toFixed(2)}}</td>
                                <td class="text-end">{{(invoice.amount - invoice.paidAmount).toFixed(2)}}</td>
                                <td>{{invoice.paidid}}</td>
-                               <td class="text-end"></td>
+                               <td class="text-end">{{invoice.date}}</td>
                             </tr>
                             <tr>
                                <td class="text-end fw-bold">Totals</td>
