--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                <td class="text-end">{{(invoice.paidAmount).toFixed(2)}}</td>
                                <td class="text-end">{{(invoice.amount - invoice.paidAmount).toFixed(2)}}</td>
                                <td>{{invoice.paidid}}</td>
-                               <td class="text-end">{{new Date(invoice.date).toLocaleString()}}</td>
+                               <td class="text-end">{{formattedDate(invoice.date)}}</td>
                             </tr>
                             <tr>
                                <td class="text-end fw-bold">Totals</td>
