Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                             <div class="col red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div><label>Invoice Date (yyyy/mm/dd):</label></div>
-                            <div><input type="text" name="inv_date" v-model="invoiceDate"></div>
+                            <div><label>Invoice Date:</label></div>
+                            <div><input type="date" name="inv_date" v-model="invoiceDate"></div>
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
