--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="invoice in vendorInvoicesArray" @click="showInvoiceDetails">
+                            <tr v-for="invoice in vendorInvoicesArray" @click="showInvoiceDetails(invoice)">
                                <td>{{invoice.number}}</td>
                                <td>{{invoice.id}}</td>
                                <td>{{formattedDate(invoice.date)}}</td>
